--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.4.3"
+    "astro": "^5.4.3",
+    "commentbox.io": "^2.1.0"
   }
 }
