--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/rss": "^4.0.11",
     "astro": "^5.4.3",
-    "commentbox.io": "^2.1.0"
+    "commentbox.io": "^2.1.0",
+    "markdown-it": "^14.1.0",
+    "sanitize-html": "^2.15.0"
   }
 }
